--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>What's the Probability of a 10x Stock?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Your favorite? 40sec -1 - 2 - 3 - 4 - 5 or 7min. ?</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Trading Slippage: Gold Market's Shocking $2,900 Loss! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>Algorithmic Trading: Disadvantages EXPOSED! Know BEFORE! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1557,7 +1557,7 @@
                     <div class="video-info">
                         <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2327,7 +2327,7 @@
                     <div class="video-info">
                         <h3>Strategy Build! 🏆 Kevin Davey Strategy Club October 2025📈</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 09, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>What's the Probability of a 10x Stock?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Trading Slippage: Gold Market's Shocking $2,900 Loss! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5160,7 +5160,7 @@
                         <div class="video-info">
                             <h3>Algorithmic Trading: Disadvantages EXPOSED! Know BEFORE! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5703,7 +5703,7 @@
                         <div class="video-info">
                             <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -6077,7 +6077,7 @@
                         <div class="video-info">
                             <h3>Strategy Build! 🏆 Kevin Davey Strategy Club October 2025📈</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 09, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Your favorite? 40sec -1 - 2 - 3 - 4 - 5 or 7min. ?</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
