--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Stop Letting Life Control You | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">10 minutes ago</div>
+                        <div class="date">31 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Backtest Accuracy: Matching Your Live Trading Results #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>You Must Become Famous | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -849,7 +849,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Embracing Spiritual Growth</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2228,7 +2228,7 @@
                     <div class="video-info">
                         <h3>Stop Letting the News Ruin Your Peace</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Backtest Accuracy: Matching Your Live Trading Results #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Stop Letting Life Control You | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">10 minutes ago</div>
+                            <div class="date">31 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>You Must Become Famous | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7557,7 +7557,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Embracing Spiritual Growth</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7832,7 +7832,7 @@
                         <div class="video-info">
                             <h3>Stop Letting the News Ruin Your Peace</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
