--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Why Labour are so unpopular</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">8 minutes ago</div>
+                        <div class="date">29 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>A Young Boy Asks Sadhguru About Lies</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 minutes ago</div>
+                        <div class="date">40 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Stop Letting Life Control You | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">48 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Not Closing - The Path to Unconditional Love</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -431,7 +431,7 @@
                     <div class="video-info">
                         <h3>Don’t Deny Your Shadow – A Personal Story</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>400 Yard Drives - No Weight Shift. Long Drive Coach Exposes the Truth</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -618,7 +618,7 @@
                     <div class="video-info">
                         <h3>Only Human Beings Have This Unique Problem! | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -838,7 +838,7 @@
                     <div class="video-info">
                         <h3>First Day Trading my the5ers Evaluation Account (Live Documentary)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -849,7 +849,7 @@
                     <div class="video-info">
                         <h3>Forex & CFD Expert Advisor Livetrading + Q&A Session (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Why Labour are so unpopular</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">8 minutes ago</div>
+                            <div class="date">29 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5325,7 +5325,7 @@
                         <div class="video-info">
                             <h3>First Day Trading my the5ers Evaluation Account (Live Documentary)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -5336,7 +5336,7 @@
                         <div class="video-info">
                             <h3>Forex & CFD Expert Advisor Livetrading + Q&A Session (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>A Young Boy Asks Sadhguru About Lies</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 minutes ago</div>
+                            <div class="date">40 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Stop Letting Life Control You | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">48 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Not Closing - The Path to Unconditional Love</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7392,7 +7392,7 @@
                         <div class="video-info">
                             <h3>Don’t Deny Your Shadow – A Personal Story</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7491,7 +7491,7 @@
                         <div class="video-info">
                             <h3>Only Human Beings Have This Unique Problem! | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>400 Yard Drives - No Weight Shift. Long Drive Coach Exposes the Truth</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
