--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Acceptance in the Present Moment, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">42 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>A Young Boy Asks Sadhguru About Lies</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Backtest Accuracy: Matching Your Live Trading Results #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Take This Commitment on #WorldMentalHealthDay | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2316,7 +2316,7 @@
                     <div class="video-info">
                         <h3>The moment he figured out the golf swing</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 10, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Backtest Accuracy: Matching Your Live Trading Results #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Acceptance in the Present Moment, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">42 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>A Young Boy Asks Sadhguru About Lies</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Take This Commitment on #WorldMentalHealthDay | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9467,7 +9467,7 @@
                         <div class="video-info">
                             <h3>The moment he figured out the golf swing</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 10, 2025</div>
                         </div>
                     </a>
                 </div>
